[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["lhgarciadev <garcia.shk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
zenml = {extras = ["server"], version = "^0.63.0"}
catboost = "^1.2.5"
joblib = "^1.4.2"
lightgbm = "^4.5.0"
optuna = "^3.6.1"
streamlit = "^1.37.0"
xgboost = "^2.1.1"
markupsafe = "^2.1.5"
pandas = "^2.2.2"
mlflow = "^2.15.0"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
